uploading my project

--- a/src/app/views/acceuilstagiaire/acceuilstagiaire.component.html
+++ b/src/app/views/acceuilstagiaire/acceuilstagiaire.component.html
@@ -64,7 +64,15 @@
           <tr class="row3">
             <td class="column0">&nbsp;</td>
             <td class="column1">&nbsp;</td>
-            <td class="column2 style49 s style49" colspan="2">Entité</td>
+            <td class="column2 style49 s style49" colspan="2" > Entité
+              <select class="form-control">
+                <option>Solution spécifique</option>
+                <option>Web</option>
+                <option>Mobile </option>
+                <option>Manager</option>
+
+            </select>
+            </td>
             
             <td class="column9">&nbsp;</td>
             <td class="column10">&nbsp;</td>
@@ -74,7 +82,19 @@
           <tr class="row4">
             <td class="column0">&nbsp;</td>
             <td class="column1">&nbsp;</td>
-            <td class="column2 style49 s style49" colspan="2">Encadrant</td>
+            <td class="column2 style49 s style49" colspan="2">Encadrant
+             
+              
+                    <select class="form-control">
+                        <option>Hichem</option>
+                        <option>Yassine</option>
+                        <option>Ahmed </option>
+                        <option>Sedik</option>
+
+                    </select>
+           
+            </td>
+          
            
             <td class="column9">&nbsp;</td>
             <td class="column10">&nbsp;</td>
@@ -94,7 +114,21 @@
           <tr class="row6">
             <td class="column0">&nbsp;</td>
             <td class="column1">&nbsp;</td>
-            <td class="column2 style49 s style49" colspan="2">Mois</td>
+            <td class="column2 style49 s style49" colspan="2">Mois
+              <select class="form-control">
+                <option>Janvier</option>
+                <option>Fevrier</option>
+                <option>Mars </option>
+                <option>Avril</option>
+                <option>Mai</option>
+
+                <option>Juin</option>
+
+                <option>Juillet</option>
+
+
+            </select>
+            </td>
             
             <td class="column9">&nbsp;</td>
             <td class="column10">&nbsp;</td>
@@ -126,12 +160,24 @@
             <td class="column12">&nbsp;</td>
           </tr>
           <tr class="row9">
-            <td class="column0 style16 n"></td>
-            <td class="column1 style6 n"></td>
-            <td class="column2 style6 null"></td>
-            <td class="column3 style6 null"></td>
-            <td class="column4 style44 null style45" colspan="2"></td>
-            <td class="column6 style48 null style48" colspan="6"></td>
+            <td class="column0 style16 n">
+              <input type="date" id="date">
+            </td>
+            <td class="column1 style6 n">
+              <input type="number" id="date">
+            </td>
+            <td class="column2 style6 null">
+              <input type="number" id="date">
+            </td>
+            <td class="column3 style6 null">
+              <input type="number" id="date">
+            </td>
+            <td class="column4 style44 null style45" colspan="2">
+              <input type="number" id="date">
+            </td>
+            <td class="column6 style48 null style48" colspan="6">
+              
+            </td>
             <td class="column12">&nbsp;</td>
           </tr>
           <tr class="row10">
@@ -236,7 +282,7 @@
             <td class="column12">&nbsp;</td>
           </tr>
           <tr class="row21">
-            <td class="column0 style17 n"></td>
+            <td class="column0 style17 null"></td>
             <td class="column1 style11 null"></td>
             <td class="column2 style11 null"></td>
             <td class="column3 style11 null"></td>
