--- a/src/app/views/acceuilstagiaire/acceuilstagiaire.component.scss
+++ b/src/app/views/acceuilstagiaire/acceuilstagiaire.component.scss
@@ -11,8 +11,8 @@ html { font-family:Calibri, Arial, Helvetica, sans-serif; font-size:11pt; backgr
       .inlineStr { text-align:left }
       .n { text-align:right }
       .s { text-align:left }
-      td.style0 { vertical-align:bottom; border-bottom:1px solid #222C4A !important; border-top:1px solid #222C4A !important; border-left:1px solid #222C4A !important; border-right:1px solid #222C4A !important; color:#000000; font-family:'Verdana'; font-size:10pt; background-color:white }
-      th.style0 { vertical-align:bottom; border-bottom:1px solid #222C4A !important; border-top:1px solid #222C4A !important; border-left:1px solid #222C4A !important; border-right:1px solid #222C4A !important; color:#000000; font-family:'Verdana'; font-size:10pt; background-color:white }
+      td.style0 { vertical-align:bottom; border-bottom:1px solid #b3b6be !important; border-top:1px solid #222C4A !important; border-left:1px solid #222C4A !important; border-right:1px solid #222C4A !important; color:#000000; font-family:'Verdana'; font-size:10pt; background-color:white }
+      th.style0 { vertical-align:bottom; border-bottom:1px solid #b3b6be !important; border-top:1px solid #222C4A !important; border-left:1px solid #222C4A !important; border-right:1px solid #222C4A !important; color:#000000; font-family:'Verdana'; font-size:10pt; background-color:white }
       td.style1 { vertical-align:bottom; border-bottom:none #000000; border-top:none #000000; border-left:none #000000; border-right:none #000000; font-weight:bold; color:#EDEDED; font-family:'Verdana'; font-size:10pt; background-color:white }
       th.style1 { vertical-align:bottom; border-bottom:none #000000; border-top:none #000000; border-left:none #000000; border-right:none #000000; font-weight:bold; color:#EDEDED; font-family:'Verdana'; font-size:10pt; background-color:white }
       td.style2 { vertical-align:top; text-align:left; padding-left:0px; border-bottom:none #000000; border-top:none #000000; border-left:none #000000; border-right:none #000000; color:#222C4A; font-family:'Verdana'; font-size:10pt; background-color:white }
